@@ -1,52 +1,52 @@
 package no.nav.registre.testnav.inntektsmeldingservice.controller;
 
 import io.swagger.v3.core.util.Json;
-import lombok.RequiredArgsConstructor;
+import jakarta.validation.ValidationException;
 import lombok.extern.slf4j.Slf4j;
 import no.nav.registre.testnav.inntektsmeldingservice.service.InntektsmeldingService;
 import no.nav.testnav.libs.dto.dokarkiv.v1.ProsessertInntektDokument;
-import no.nav.testnav.libs.dto.inntektsmeldingservice.v1.requests.InntektsmeldingRequest;
 import no.nav.testnav.libs.dto.inntektsmeldingservice.v1.response.InntektsmeldingResponse;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.web.server.ResponseStatusException;
 
-import jakarta.validation.ValidationException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @RestController
-@RequestMapping(value = "/api/v1/inntektsmelding", produces = "application/json;charset=utf-8")
-@RequiredArgsConstructor
+@RequestMapping(
+        value = "/api/v1/inntektsmelding",
+        produces = MediaType.APPLICATION_JSON_VALUE
+)
+@Slf4j
 public class InntektsmeldingController {
 
     private final InntektsmeldingService inntektsmeldingService;
 
-    @PostMapping(produces = "application/json;charset=utf-8")
-    @ResponseBody
-    public InntektsmeldingResponse genererMeldingForIdent(
+    public InntektsmeldingController(InntektsmeldingService inntektsmeldingService) {
+        this.inntektsmeldingService = inntektsmeldingService;
+    }
+
+    @PostMapping
+    InntektsmeldingResponse genererMeldingForIdent(
             @RequestHeader("Nav-Call-Id") String navCallId,
             @RequestBody InntektsmeldingRequest request
     ) {
-        log.info("Oppretter inntektsmelding for {} i {} melding {}.", request.getArbeidstakerFnr(), request.getMiljoe(), Json.pretty(request));
+        log.info("Oppretter inntektsmelding for {} i {} melding {}.", request.arbeidstakerFnr(), request.miljoe(), Json.pretty(request));
 
         validerInntektsmelding(request);
 
         try {
             List<ProsessertInntektDokument> prosessertInntektDokuments = inntektsmeldingService.opprettInntektsmelding(navCallId, request);
             return new InntektsmeldingResponse(
-                    request.getArbeidstakerFnr(),
-                    prosessertInntektDokuments.stream().map(ProsessertInntektDokument::toResponse).collect(Collectors.toList())
+                    request.arbeidstakerFnr(),
+                    prosessertInntektDokuments
+                            .stream()
+                            .map(ProsessertInntektDokument::toResponse)
+                            .toList()
             );
-
         } catch (WebClientResponseException.BadRequest ex) {
             throw new ResponseStatusException(
                     HttpStatus.BAD_REQUEST, ex.getResponseBodyAsString(StandardCharsets.UTF_8), ex);
@@ -54,7 +54,7 @@ public class InntektsmeldingController {
     }
 
     private void validerInntektsmelding(InntektsmeldingRequest dollyRequest) {
-        for (var inntekt : dollyRequest.getInntekter()) {
+        for (var inntekt : dollyRequest.inntekter()) {
             var arbeidsgiver = inntekt.getArbeidsgiver();
             var arbeidsgiverPrivat = inntekt.getArbeidsgiverPrivat();
 
@@ -66,4 +66,5 @@ public class InntektsmeldingController {
             }
         }
     }
+
 }
